--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+  "postinstall": "prisma generate"
+
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
